
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct zram {int init_done; } ;
struct device_attribute {int dummy; } ;
struct device {int dummy; } ;
typedef int ssize_t ;


 struct zram* dev_to_zram (struct device*) ;
 int sprintf (char*,char*,int) ;

__attribute__((used)) static ssize_t initstate_show(struct device *dev,
  struct device_attribute *attr, char *buf)
{
 struct zram *zram = dev_to_zram(dev);

 return sprintf(buf, "%u\n", zram->init_done);
}
